--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBaycdvDewUbFnQHVDxxYG0t0YsdJCN_JM"></script>
 </head>
 <body>
   <app-root></app-root>
